# Schedly

./: .env.example  LICENSE  README.md  Schedly.postman_collection.json  docker-compose.yaml
backend/: .env.example  .gitignore  Dockerfile  README.md  activate.ps1  create_module.py  pyproject.toml
backend/cookiecutter-template/: cookiecutter.json
backend/schedly/: app.py  settings.py
backend/schedly/alembic/: env.py  script.py.mako
backend/schedly/alembic/versions/: 4a337fe1facd_create_table_event.py  8271bf8df4c4_create_database.py  8341fd573766_create_table_event_type.py  99a101efa8c4_create_table_token.py  a3a93eeec593_create_tableuser.py
backend/schedly/core/models/: __init__.py  avails.py  event.py  event_type.py  photo.py  scheduling.py  token.py  user.py
backend/schedly/core/use_cases/auth/: login.py  (+1 more)
backend/schedly/infra/database/: __init__.py  base.py
backend/schedly/infra/repositories/: avails_repository.py  event_repository.py  event_type_repository.py  scheduling_repository.py  token_repository.py  user_repository.py
backend/schedly/infra/security/: jwt_handler.py
backend/schedly/infra/storage/: minio_config.py  storage_service.py
backend/schedly/interface/exceptions/: custom_exceptions.py  handlers.py  photo_exceptions.py
backend/schedly/interface/middleware/: jwt_bearer.py
backend/schedly/interface/routers/: auth_router.py  avails_router.py  event_router.py  event_type_router.py  scheduling_router.py  token_router.py  user_router.py
backend/schedly/interface/schemas/: Auth.py  Avails.py  Event.py  Scheduling.py  User.py
backend/schedly/interface/service/: auth_service.py  avails_service.py  event_service.py  event_type_service.py  scheduling_service.py  token_service.py  user_service.py
backend/schedly/scripts/: seed.py
backend/schedly/utils/: generate_schemas.py  password.py  serializers.py  validate_slug.py
backend/scripts/: healthcheck.sh  run_migrations.sh  start.sh
backend/tests/: conftest.py  test_app.py
backend/tests/user/: test_repo_user.py
(+117 files in other folders)
